Fix for MDEV-4149, backport from 10.0:   committer: Sergei Golubchik <sergii@pisem.net>     fix for a valgrind builds.     my_alloca() cannot have MY_THREAD_SPECIFIC, because can be used     outside of the THD context.